--- a/pages/login.html
+++ b/pages/login.html
@@ -53,24 +53,26 @@
       <div class="overbox" ng-controller="registroCtrl">
         <div class="material-button alt-2"><span class="shape"></span></div>
         <div class="title">REGISTER</div>
+        <form class="" ng-submit="registrar()" method="post">
         <div class="input">
           <label for="regname">Username</label>
-          <input type="text" name="regname" id="regname">
+          <input type="text" ng-model="registro.regname" required name="regname" id="regname">
           <span class="spin"></span>
         </div>
         <div class="input">
           <label for="regpass">Password</label>
-          <input type="password" name="regpass" id="regpass">
+          <input type="password" ng-model="registro.regpass" required name="regpass" id="regpass">
           <span class="spin"></span>
         </div>
         <div class="input">
           <label for="reregpass">Repeat Password</label>
-          <input type="password" name="reregpass" id="reregpass">
+          <input type="password" ng-model="registro.reregpass" required name="reregpass" id="reregpass">
           <span class="spin"></span>
         </div>
         <div class="button">
-          <button><span>NEXT</span></button>
+          <button type="submit" ><span>NEXT</span></button>
         </div>
+          </form>
       </div>
     </div>
   </div>
